--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/DonyaMousa/finalscrapper#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "cron": "^2.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "isomorphic-fetch": "^3.0.0",
     "mongoose": "^6.9.0",
-    "puppeteer": "^19.6.3"
+    "puppeteer": "^19.6.3",
+    "webflow-api": "^1.2.2"
   }
 }
