--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   },
   "homepage": "https://github.com/DonyaMousa/finalscrapper#readme",
   "dependencies": {
+    "axios": "^1.3.1",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "cron": "^2.2.0",
+    "debounce": "^1.2.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "isomorphic-fetch": "^3.0.0",
     "mongoose": "^6.9.0",
+    "promise-queue": "^2.2.5",
     "puppeteer": "^19.6.3",
     "webflow-api": "^1.2.2"
   }
